@startuml "Diagrama ER MongoDB"
!theme mars
left to right direction

entity "User" as auth {
  * _id
  --
  username
  password
  status
  scheduled_purge_at
}

entity "Conversation" as conversation {
  * _id
  --
  # user_id
  updated_at
  title
  messages
  stream_state
  stream_partial_reply
  stream_updated_at
  stream_error
}

entity "Meeting" as meeting {
  * _id
  --
  # user_id
  title
  date
  language
  summary
  transcription
}

entity "UserSettings" as settings {
  * _id
  --
  # user_id
  providers
  models
  transcription
  templates
}

auth ||--o{ conversation : "tiene"
auth ||--o{ meeting : "tiene"
auth ||--|| settings : "tiene"

@enduml
